# anchore_engine/services/policy_engine/swagger/swagger.yaml
@@ -840,6 +840,12 @@ definitions:
       description:
         type: string
         description: Description of the gate
+      is_deprecated:
+        type: boolean
+        description: True if this gate is deprecated
+      superceded_by:
+        type: string
+        description: The name of another gate that supercedes this on functionally if this is deprecated
       triggers:
         type: array
         description: List of the triggers that can fire for this Gate
@@ -855,6 +861,12 @@ definitions:
       description:
         type: string
         description: Trigger description for what it tests and when it will fire during evaluation
+      is_deprecated:
+        type: boolean
+        description: True if this trigger is deprecated
+      superceded_by:
+        type: string
+        description: The name of another trigger that supercedes this on functionally if this is deprecated
       parameters:
         type: array
         description: The list of parameters that are valid for this trigger
@@ -871,6 +883,12 @@ definitions:
       required:
         description: Is this a required parameter or optional
         type: boolean
+      is_deprecated:
+        type: boolean
+        description: True if this gate is deprecated
+      superceded_by:
+        type: string
+        description: The name of another gate that supercedes this on functionally if this is deprecated
       validator:
         type: object
         description: If present, a definition for validation of input. Typically a jsonschema object that can be used to validate an input against.
